welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:3: error: not found: value maxVal
	maxVal = nums(0);
        ^maxValue:6: error: not found: value maxVal
		if(nums(i) > maxVal)
                             ^maxValue:8: error: not found: value maxVal
			maxVal = nums(i);
                        ^maxValue:11: error: not found: value maxVal
	return maxVal;
               ^