welcome.lessons.welcome.array.maxvalue.MaxValue.scala.code
def maxValue(nums:Array[Int]): Int = {

	maxVal = nums(0);
	for(i <- 0 to nums.length - 1)
	{
		if(nums(i) > maxVal)
		{
			maxVal = nums(i);
		}
	}
	return maxVal;
}
